--- a/app/src/main/res/layout/jogo_cores.xml
+++ b/app/src/main/res/layout/jogo_cores.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cores_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -28,7 +29,7 @@
 
             <LinearLayout
                 android:layout_width="406dp"
-                android:layout_height="463dp"
+                android:layout_height="464dp"
                 android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingTop="20dp"
@@ -37,9 +38,11 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="380dp"
-                    android:layout_height="0dp"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_corner">
 
                     <ImageView
@@ -62,15 +65,16 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.94"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                        app:layout_constraintTop_toTopOf="parent"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="380dp"
-                    android:layout_height="0dp"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_corner">
 
                     <ImageView
@@ -100,9 +104,11 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="380dp"
-                    android:layout_height="0dp"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_corner">
 
                     <ImageView
@@ -131,9 +137,11 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="380dp"
-                    android:layout_height="0dp"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_corner">
 
                     <ImageView
@@ -162,9 +170,11 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="380dp"
-                    android:layout_height="0dp"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_corner">
 
                     <ImageView
@@ -193,9 +203,11 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="380dp"
-                    android:layout_height="0dp"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_corner">
 
                     <ImageView
