--- a/app/src/main/res/layout/jogo_cores.xml
+++ b/app/src/main/res/layout/jogo_cores.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/timer"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="312dp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="-2dp"/>
+
     <GridLayout
         android:id="@+id/cores_grid"
         android:layout_width="wrap_content"
