--- a/app/src/main/res/layout/perfil_edit_kid.xml
+++ b/app/src/main/res/layout/perfil_edit_kid.xml
@@ -218,6 +218,7 @@
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputNomeDependente"
                     android:layout_width="match_parent"
                     android:layout_marginBottom="10dp"
                     android:layout_height="wrap_content"
@@ -280,14 +281,14 @@
             </RadioGroup>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnUpdateKid"
                 style="@style/PrimaryButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Atualizar cadastro" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btnDeleteKid"
                 style="@style/ParalelButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
