--- a/app/src/main/res/layout/perfil_resultados.xml
+++ b/app/src/main/res/layout/perfil_resultados.xml
@@ -79,6 +79,8 @@
                 android:id="@+id/switch1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
+                android:enabled="false"
                 android:text="Mostrar ultimo Resultado de cada jogo" />
 
             <TextView
