--- a/app/src/main/res/layout/perfil_trocar_player.xml
+++ b/app/src/main/res/layout/perfil_trocar_player.xml
@@ -50,7 +50,7 @@
         tools:listitem="@layout/item_jogador" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnCreateNewPlayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
