--- a/app/src/main/res/layout/jogo_vogais.xml
+++ b/app/src/main/res/layout/jogo_vogais.xml
@@ -6,13 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:id="@+id/timer"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="312dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <GridLayout
+        android:id="@+id/placed_vogais"
+        android:layout_width="389dp"
+        android:layout_height="wrap_content"
+        android:minHeight="200dp"
+        android:layout_gravity="center"
+        android:background="@drawable/rounded_corner"
+        android:columnCount="4"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="-2dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.171" />
 
     <GridLayout
         android:id="@+id/vogais_grid"
@@ -20,11 +35,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/rounded_corner"
-        android:columnCount="3"
+        android:columnCount="5"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.129" />
+        app:layout_constraintVertical_bias="0.963" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
