--- a/app/src/main/res/layout/sobre.xml
+++ b/app/src/main/res/layout/sobre.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.views.sobre.SobreScreen">
+    tools:context=".ui.sobre.Sobre">
 
     <ScrollView
         android:layout_width="0dp"
