--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.integra_kids_mobile.ui.views.jogos.JogosScreen"
+        android:name="com.example.integra_kids_mobile.ui.jogos.Jogos"
         android:label="@string/title_games"
         tools:layout="@layout/jogos" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.integra_kids_mobile.ui.views.perfil.PerfilScreen"
+        android:name="com.example.integra_kids_mobile.ui.perfil.Perfil"
         android:label="@string/title_profile"
         tools:layout="@layout/perfil" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.integra_kids_mobile.ui.views.sobre.SobreScreen"
+        android:name="com.example.integra_kids_mobile.ui.sobre.Sobre"
         android:label="@string/title_about"
         tools:layout="@layout/sobre" />
     <fragment
         android:id="@+id/usuarioConfig"
-        android:name="com.example.integra_kids_mobile.ui.views.PreferencesScreen"
+        android:name="com.example.integra_kids_mobile.UsuarioConfig"
         android:label="usuario_config"
         tools:layout="@layout/usuario_config" />
 
