--- a/app/src/main/res/layout/login_cadastro.xml
+++ b/app/src/main/res/layout/login_cadastro.xml
@@ -84,6 +84,7 @@
                 android:id="@+id/inputLoginSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:hint="Digite sua senha" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -161,6 +162,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
+                android:inputType="textPassword"
                 android:hint="Digite sua senha" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -174,6 +176,7 @@
                 android:id="@+id/inputRegSenhaConf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:hint="Confirme sua senha" />
         </com.google.android.material.textfield.TextInputLayout>
 
